--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "flisol-tool",
   "private": true,
   "dependencies": {
-    "bootstrap": "^4.2.1"
+    "bootstrap": "^4.2.1",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.14.7"
   },
   "version": "1.0.0",
   "description": "Herramienta para administracion de flisol",
